manifests/telemetry-query/telemetry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress-telemetry-query
  namespace: axion-app
  labels:
    app.kubernetes.io/name: telemetry-query-ingress
  annotations:
    appgw.ingress.kubernetes.io/health-probe-path: "/docs"
    appgw.ingress.kubernetes.io/cookie-based-affinity: "false"
    appgw.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: azure-application-gateway

  rules:
    - host: telemetry.maneesh.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: telemetry-query-service
                port:
                  number: 80
